--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="gray">#2d2d2d</color>
-    <color name="edge">#e1e1e1</color>
+    <color name="yellow">#fdb303</color>
 </resources>
